--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+.idea
 # dependencies
 /node_modules
 /.pnp
@@ -9,6 +10,7 @@
 /coverage
 
 # production
+/build
 
 # misc
 .DS_Store
